# VideoKidnapper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v1.0.0.md  SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: appimage.yml  ci.yml  installer.yml  macos.yml  msix.yml  release.yml  website.yml
assets/branding/: README.md
docs/: BLUEPRINT.md  DISTRIBUTION-PLAN.md  PLUGINS.md  PRIVACY.md  RELEASE.md  ROADMAP.md  STORE_LISTING.md  STORE_UPDATE_GUIDE.md
docs/release-notes/: 1.2.0.md
examples/plugins/videokidnapper_hello/: README.md  pyproject.toml
examples/plugins/videokidnapper_hello/videokidnapper_hello/: __init__.py
packaging/: videokidnapper-linux.spec  videokidnapper-macos.spec  videokidnapper.spec
packaging/appimage/: AppRun  README.md  videokidnapper.desktop
packaging/deb/: README.md  build-deb.sh
packaging/homebrew/: README.md  videokidnapper.rb
packaging/inno-setup/: README.md  videokidnapper.iss
packaging/macos/: README.md
packaging/msix/: AppxManifest.template.xml  README.md  build-msix.ps1
packaging/winget/: README.md
packaging/winget/manifests/1.2.0/: AES256Afro.VideoKidnapper.installer.yaml  AES256Afro.VideoKidnapper.locale.en-US.yaml  AES256Afro.VideoKidnapper.yaml
packaging/winget/manifests/1.4.0/: AES256Afro.VideoKidnapper.installer.yaml  AES256Afro.VideoKidnapper.locale.en-US.yaml  AES256Afro.VideoKidnapper.yaml
scripts/: capture_screenshots.py  record_demo.py  tag_release.sh
site/: index.html  privacy.html  screenshots.html  styles.css
snapit/: __init__.py  app.py  config.py
snapit/core/: downloader.py  ffmpeg_backend.py  preview.py  recorder.py
snapit/ui/: debug_tab.py  record_tab.py  region_selector.py  text_layers.py  trim_tab.py  url_tab.py  video_player.py  widgets.py
snapit/utils/: ffmpeg_check.py  file_naming.py
tests/: test_batch_export.py  test_blur_fill.py  test_clipboard_image.py  test_color_filter.py  test_dnd.py  test_downloader_resilience.py  test_ffmpeg_escape.py  test_ffmpeg_filters.py  test_file_naming.py  test_gif_options.py  test_github_update.py  test_history.py  test_hw_encoder.py  test_image_overlay.py  test_integration_ffmpeg.py  test_license_headers.py  test_motion_keyframes.py  test_native_download_integration.py  test_platform_detect.py  test_platform_presets.py  test_playback.py  test_plugins.py  test_position_parse.py  test_prereq_check.py  test_preview_cache.py  test_project_files.py  test_robustness.py  test_settings.py  test_share.py  test_shortcuts_dialog.py  test_size_estimator.py  test_snap.py  test_srt_parser.py  test_text_styling.py  test_time_format.py  test_transitions.py  test_undo.py  test_urltools.py  test_whisper_captions.py
videokidnapper/: __init__.py  app.py  cli.py  config.py
videokidnapper/assets/: icon.icns
videokidnapper/core/: downloader.py  ffmpeg_backend.py  koolaid_extractor.py  playback.py  preview.py  screen_capture.py  tracker.py  whisper_captions.py
videokidnapper/core/ffmpeg/: __init__.py  _internals.py  concat.py  encode.py  filters.py  probe.py
videokidnapper/plugins/: __init__.py  base.py  discovery.py
videokidnapper/ui/: batch_export_tab.py  batch_queue.py  color_picker.py  debug_tab.py  export_dialog.py  export_options.py  history_tab.py  image_layers.py  koolaid_tab.py  multi_range.py  onboarding_dialog.py  platform_presets.py  project_dialog.py  setup_dialog.py  share_panel.py  shortcuts_dialog.py  source_bar.py  text_layers.py  theme.py  thumbnail_strip.py  trim_tab.py  update_dialog.py  url_tab.py  video_player.py  waveform.py  widgets.py
videokidnapper/utils/: __init__.py  batch.py  clipboard_image.py  dnd.py  ffmpeg_check.py  ffmpeg_escape.py  file_naming.py  github_update.py  keyframes.py  prereq_check.py  project_files.py  settings.py  share.py  size_estimator.py  snap.py  srt_parser.py  time_format.py  undo.py  urltools.py  ytdlp_update.py
