# SPDX-FileCopyrightText: 2026 Christopher Courtney <https://github.com/AES256Afro>
# SPDX-License-Identifier: Apache-2.0
#
# Build + packaging metadata for PyPI.
# Version is owned by videokidnapper/__init__.py (__version__) — bump
# there and the tag-push release workflow picks it up automatically.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videokidnapper"
dynamic = ["version"]
description = "Dark-themed desktop tool for trimming videos, downloading clips from the open web, and exporting polished GIFs or MP4s with text overlays."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Christopher Courtney", email = "noreply@github.com" },
]
keywords = [
    "video", "gif", "ffmpeg", "yt-dlp", "trim", "clip", "subtitle",
    "overlay", "editor", "desktop", "customtkinter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
    "Topic :: Utilities",
]
dependencies = [
    "customtkinter>=5.2.0,<6.0",
    "Pillow>=10.0.0,<12.0",
    "mss>=9.0.0,<11.0",
    "yt-dlp>=2024.0.0",
]

[project.optional-dependencies]
# Drag-and-drop support. The app degrades gracefully when missing, so
# users who don't want the extra native dep can skip this.
dnd = ["tkinterdnd2>=0.3.0"]
# Aggregate: everything, for `pip install videokidnapper[all]`.
all = ["tkinterdnd2>=0.3.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "build>=1.0",
]

[project.scripts]
videokidnapper = "videokidnapper.cli:main"

[project.urls]
Homepage = "https://github.com/AES256Afro/VideoKidnapper"
Repository = "https://github.com/AES256Afro/VideoKidnapper"
Issues = "https://github.com/AES256Afro/VideoKidnapper/issues"
Changelog = "https://github.com/AES256Afro/VideoKidnapper/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Setuptools specifics
# ---------------------------------------------------------------------------

[tool.setuptools]
# Explicit list keeps the sdist lean: we don't want tests/, scripts/, or
# the assets/ screenshots blob shipped inside the wheel.
packages = [
    "videokidnapper",
    "videokidnapper.core",
    "videokidnapper.ui",
    "videokidnapper.utils",
]

[tool.setuptools.dynamic]
version = { attr = "videokidnapper.__version__" }
